--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ body {
 	background-color: var(--third-color);
 	box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
 	overflow: hidden;
+	border-radius: 10px;
 }
 
 .player-0-panel,
@@ -126,6 +127,7 @@ body {
 	margin: 0 auto;
 	padding: 12px;
 	text-align: center;
+	border-radius: 10px;
 }
 
 .player-current-label {
